[package]
name = "oxide_linux"
version = "0.1.2"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
edition = "2021"
description = "A minimalist utility library for fetching common Linux system information."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bensatlantik/oxide_linux"

[dependencies]
